crates/parser/tests/snapshots/value_boolean.snap
---
source: crates/parser/tests/snapshots.rs
---
# value-boolean

## Input

```
a true
b false

```

## CST

```
SOURCE_FILE@0..15
  ENTRY@0..7
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..2 " "
    BOOLEAN@2..6
      TRUE@2..6 "true"
    NEWLINE@6..7 "\n"
  ENTRY@7..15
    WORD_KEY@7..8
      WORD@7..8 "b"
    SPACE@8..9 " "
    BOOLEAN@9..14
      FALSE@9..14 "false"
    NEWLINE@14..15 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            value: Boolean {
                token: TRUE@2..6 "true",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@7..8 "b",
            },
            value: Boolean {
                token: FALSE@9..14 "false",
            },
        },
    ],
}
```

vim:ft=markdown
