crates/parser/tests/snapshots/value_boolean_fallback.snap
---
source: crates/parser/tests/snapshots.rs
---
# value-boolean-fallback

## Input

```
a trueish
b falsehood
c true value
d false value

```

## CST

```
SOURCE_FILE@0..49
  ENTRY@0..10
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..2 " "
    LINE_STRING@2..9
      STRING@2..9 "trueish"
    NEWLINE@9..10 "\n"
  ENTRY@10..22
    WORD_KEY@10..11
      WORD@10..11 "b"
    SPACE@11..12 " "
    LINE_STRING@12..21
      STRING@12..21 "falsehood"
    NEWLINE@21..22 "\n"
  ENTRY@22..35
    WORD_KEY@22..23
      WORD@22..23 "c"
    SPACE@23..24 " "
    LINE_STRING@24..34
      STRING@24..34 "true value"
    NEWLINE@34..35 "\n"
  ENTRY@35..49
    WORD_KEY@35..36
      WORD@35..36 "d"
    SPACE@36..37 " "
    LINE_STRING@37..48
      STRING@37..48 "false value"
    NEWLINE@48..49 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            value: LineString {
                string: STRING@2..9 "trueish",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@10..11 "b",
            },
            value: LineString {
                string: STRING@12..21 "falsehood",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@22..23 "c",
            },
            value: LineString {
                string: STRING@24..34 "true value",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@35..36 "d",
            },
            value: LineString {
                string: STRING@37..48 "false value",
            },
        },
    ],
}
```

vim:ft=markdown
