crates/parser/tests/snapshots/whitespace_only_line_at_eof.snap
---
source: crates/parser/tests/snapshots.rs
---
# whitespace-only-line-at-eof

## Input

```
key value
   
```

## CST

```
SOURCE_FILE@0..13
  ENTRY@0..10
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    LINE_STRING@4..9
      STRING@4..9 "value"
    NEWLINE@9..10 "\n"
  SPACE@10..13 "   "
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: LineString {
                string: STRING@4..9 "value",
            },
        },
    ],
}
```

vim:ft=markdown
